--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/dasskan_website.tsx"></script>
+    <script type="module" src="dasskan_website.tsx"></script>
   </body>
 </html>
